--- a/css/common.css
+++ b/css/common.css
@@ -315,7 +315,7 @@ a:focus-visible {
     }
 
     .nav-content {
-        flex-direction: column;
+        flex-direction: row;
         gap: 1rem;
     }
 
